solved the slick of combining custom centerMode and slideToScroll

--- a/src/components/CustomSlide/CustomSlide.module.scss
+++ b/src/components/CustomSlide/CustomSlide.module.scss
@@ -1,9 +1,11 @@
 .Slide {
     text-align: center;
     color: #ccc;
+    cursor: pointer;
 }
 
 .CurrentDateSlide {
     text-align: center;
     color: rgb(3, 165, 187);
+    cursor: pointer;
 }
