--- a/src/container/TimeSelection/TimeSelection.module.scss
+++ b/src/container/TimeSelection/TimeSelection.module.scss
@@ -3,26 +3,28 @@
 
 .TimePeriodDiv {
     width: 80%;
-    height: 50px;
     border: 1px solid #ccc;
     border-radius: 10px;
     margin: 10px auto 10px auto;
     padding: 10px;
 
-    p {
-        display: inline-block;
-    }
+    display: grid;
+    grid-template-columns: 75% 25%;
+}
+
+.InfoDiv {
+    text-align: left;
+    margin-left: 30px;
 }
 
 #ReserveButton {
     background-color: black;
     color: white;
     width: 70px;
-    float: right;
-    position: relative;
-    top: 8px;
+    height: 40px;
     outline: none;
     font-size: 20px;
+    margin: auto 0 auto 0;
 }
 
 .CancelButton {
