--- a/src/UI/Loading/Loading.module.scss
+++ b/src/UI/Loading/Loading.module.scss
@@ -9,7 +9,7 @@
     position: absolute;
     left: 6px;
     width: 13px;
-    background: #fff;
+    background: rgb(0, 153, 255);
     animation: ldsFacebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
   }
   .ldsFacebook div:nth-child(1) {
