--- a/src/components/TeacherDiv/TeacherDiv.module.scss
+++ b/src/components/TeacherDiv/TeacherDiv.module.scss
@@ -1,18 +1,21 @@
 .TeacherDiv {
     display: grid;
     grid-template-columns: 40% 60%;
-    height: 125px;
-    border: 1px solid #ccc;
-    margin: 10px 0 10px 0;
+    height: 150px;
+    border-top: 1px solid #ccc;
     z-index: 100;
     cursor: pointer;
 }
 
 .TeacherImg {
-    width: 100%;
-    height: 100%;
+    width: 125px;
+    height: 125px;
     overflow: hidden;
     object-fit: cover;
+    border-radius: 100%;
+    margin-left: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .TeacherInfo {
@@ -21,7 +24,7 @@
      
     p {
         margin: 0 10px 0 10px;
-        text-align: left;
+        text-align: center;
     }
 }
 
@@ -32,7 +35,7 @@
      
     p {
         margin: 0 10px 0 10px;
-        text-align: left;
+        text-align: center;
     }
 }
 
