--- a/src/components/TeacherDiv/TeacherDiv.module.scss
+++ b/src/components/TeacherDiv/TeacherDiv.module.scss
@@ -24,7 +24,8 @@
      
     p {
         margin: 0 10px 0 10px;
-        text-align: center;
+        text-align: left;
+        white-space: pre-wrap;
     }
 }
 
