--- a/src/components/customArrows/CustomNextArrow.module.scss
+++ b/src/components/customArrows/CustomNextArrow.module.scss
@@ -7,8 +7,8 @@
     display: inline-block;
     width: 15px;
     height: 15px;
-    border-top: 4px solid #000;
-    border-right: 4px solid #000;
+    border-top: 4px solid rgb(0, 147, 206);
+    border-right: 4px solid  rgb(0, 147, 206);
     transform: rotate(45deg);
     margin-right: 10px;
 }
