--- a/src/container/TimeSelection/TimeSelection.module.scss
+++ b/src/container/TimeSelection/TimeSelection.module.scss
@@ -15,6 +15,10 @@
 .InfoDiv {
     text-align: left;
     margin-left: 30px;
+
+    p {
+        margin: 8px auto 8px auto;
+    }
 }
 
 #ReserveButton {
