--- a/src/components/InfoPage/InfoPage.module.scss
+++ b/src/components/InfoPage/InfoPage.module.scss
@@ -2,8 +2,6 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    position: relative;
-    top: 50px;
 
     span {
         color: red;
@@ -26,12 +24,27 @@
     top: 20px;
     text-align: center;
     margin: 0 auto 0 auto;
+
+    p {
+        text-align: left;
+        font-size: 12px;
+        display: inline-block;
+        position: relative;
+        left: 20px;
+        color: red;
+    }
+}
+
+.infoTitle {
+    text-align: left;
+    width: 80%;
+    margin: 0 auto 0 auto;
 }
 
 label {
-    width: 80%;
+    font-size: 20px;
     text-align: left;
-    display: block;
+    display: inline-block;
     margin: 15px auto 15px auto;
     max-width: 400px;
 }
@@ -45,4 +58,35 @@ label {
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
+}
+
+
+.selectionBar {
+    width: 80%;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    text-align: left;
+
+    select {
+        outline: none;
+        display: inline-block;
+        box-sizing: border-box;
+        width: 40%;
+        border: 1px solid #ccc;
+        background-color: white;
+        height: 30px;
+        text-align: center;
+        text-align-last: center;
+    }
+}
+
+.rightSelect {
+    position: relative;
+    left: 48px;
+}
+
+#welcomePic {
+    width: 100%;
 }
