--- a/src/container/MonthSlider/MonthSlider.module.scss
+++ b/src/container/MonthSlider/MonthSlider.module.scss
@@ -1,4 +1,18 @@
 .MonthSlider {
-    width: 50%;
-    display: inline-block;
+    width: 100%;
+
+    grid-column-start: 4;
+    grid-column-end: 5;
+
+    display: grid;
+    grid-template-rows: auto 22px auto;
+}
+
+.container {
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.MonthSlide {
+    height: 100%;
 }
