--- a/src/container/SimpleSlider/SimpleSlider.module.scss
+++ b/src/container/SimpleSlider/SimpleSlider.module.scss
@@ -1,4 +1,7 @@
 .SliderContainer {
-    height: 80%;
     width: 100%;
+    height: 60px;
+
+    grid-column-start: 2;
+    grid-column-end: 3;
 }   
