--- a/src/container/TimeSelection/TimeSelection.module.scss
+++ b/src/container/TimeSelection/TimeSelection.module.scss
@@ -1,12 +1,9 @@
-.TimeDivsContainer {
-}
-
 .TimePeriodDiv {
     width: 80%;
     border: 1px solid #ccc;
     border-radius: 10px;
     margin: 10px auto 10px auto;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
 
     display: grid;
     grid-template-columns: 75% 25%;
@@ -22,12 +19,10 @@
 }
 
 #ReserveButton {
-    background-color: black;
-    color: white;
+    color: rgb(3, 165, 187);
     width: 70px;
-    height: 40px;
     outline: none;
-    font-size: 20px;
+    font-size: 18px;
     margin: auto 0 auto 0;
 }
 
