--- a/src/components/InfoPage/InfoPage.module.scss
+++ b/src/components/InfoPage/InfoPage.module.scss
@@ -26,6 +26,7 @@
 .infoTitle {
     text-align: left;
     width: 80%;
+    max-width: 400px;
     margin: 0 auto 0 auto;
 }
 
@@ -38,19 +39,19 @@ label {
 }
 
 .InfoInput {
-    width: 80%;
+    width: 100%;
     box-sizing: border-box;
     font-size: 20px;
     border: 1px solid #ccc;
     max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
     padding: 10px;
+    display: block;
 }
 
 
 .selectionBar {
     width: 80%;
+    max-width: 400px;   
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
@@ -72,7 +73,7 @@ label {
 
 .rightSelect {
     position: relative;
-    left: 48px;
+    float: right;
 }
 
 #welcomePic {
